syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message GeneratorOptionsMessage {
    int32 initialNum = 1;
    int32 finalNum = 2;
}

message GeneratedNumberMessage {
    int32 num = 1;
}

service RemoteNumberGenerator {
    rpc generate(GeneratorOptionsMessage) returns (stream GeneratedNumberMessage);
}
